fix(home-page): recover missing margin

--- a/src/app/presentation/pages/home/home.page.scss
+++ b/src/app/presentation/pages/home/home.page.scss
@@ -23,7 +23,7 @@
   }
 
   &__header {
-    padding-bottom: 0.75rem;
+    margin-block-end: 0.75rem;
     z-index: 1100;
   }
 }
